--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
+.rootdiv{
+    position: relative;
+}
+
 #header {
     width: 100%;
     height: 120px;
     background-color: white;
     font-family: 'Abel', sans-serif;
-
+    position: sticky;
 }
 
 body {
@@ -294,7 +298,7 @@ body {
 
 .shoppingphotos1 {
     background-position: center;
-    background-image: url("/Pictures/Shopping Tools/porsche-normal\ \(3\).webp");
+    background-image: url("./Pictures/Shopping Tools/porsche-normal\ \(3\).webp");
     flex: 2;
 
 
@@ -302,13 +306,13 @@ body {
 
 .shoppingphotos2 {
     background-position: center;
-    background-image: url("/Pictures/Shopping Tools/porsche-normal.webp");
+    background-image: url("./Pictures/Shopping Tools/porsche-normal.webp");
     flex: 1;
 }
 
 .shoppingphotos3 {
     background-position: right;
-    background-image: url("/Pictures/Shopping Tools/porsche-normal (1).webp");
+    background-image: url("./Pictures/Shopping Tools/porsche-normal (1).webp");
     flex: 1;
 }
 
